# filo_leads

./: .gitignore  pyproject.toml
src/filo/: crew.py  main.py
src/filo/config/: agents.yaml  tasks.yaml
