[project]
name = "filo"
version = "0.1.0"
description = "filo using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.55.2,<1.0.0",
]

[project.scripts]
filo = "filo.main:run"
run_crew = "filo.main:run"
train = "filo.main:train"
replay = "filo.main:replay"
test = "filo.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
